--- a/ConnectedOffice/DeviceManagement_WebApp/appsettings.json
+++ b/ConnectedOffice/DeviceManagement_WebApp/appsettings.json
@@ -1,20 +1,13 @@
-
-  {
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-      "DefaultConnection": "Server=tcp:cmpg-323-f.database.windows.net,1433;Initial Catalog=ConnectedOffice;Persist Security Info=False;User ID=farai;Password=@matyukira1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-
-    },
-    "JWT": {
-      "ValidAudience": "http://localhost:4200",
-      "ValidIssuer": "http://localhost:61955",
-      "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
+{
+  "ConnectionStrings": {
+    "DefaultConnection": "Password=s3cur3p@ssw0rd;Persist Security Info=True;User ID=cmpg323_sa;Initial Catalog=ConnectedOffice;Data Source=zaazrcmpg323sqlserver.database.windows.net"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
+}
