--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,6 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+
+//aditional files
+ConnectedOffice\DeviceManagement_WebApp\appsettings.json
