--- a/.gitignore
+++ b/.gitignore
@@ -340,4 +340,4 @@ ASALocalRun/
 healthchecksdb
 
 //aditional files
-ConnectedOffice\DeviceManagement_WebApp\appsettings.json
+ConnectedOffice/DeviceManagement_WebApp/appsettings.json
